<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Remiges</string>

    <!-- Permissions -->

    <string name="permission_write">Modify Remiges logbook data</string>

    <!-- Navigation Drawer -->

    <string-array name="navigation_drawer_titles">
        <item>Jumps</item>
        <item>Places</item>
        <item>Jump Types</item>
    </string-array>
    <string name="navigation_drawer_title_navigate_jumps">Jumps</string>
    <string name="navigation_drawer_title_navigate_places">Places</string>
    <string name="navigation_drawer_title_navigate_jumptypes">Jump Types</string>
    <string name="navigation_drawer_title_extra_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_settings">Settings</string>

    <!-- Jump List -->

    <string name="fab_jump_list">Log Jump</string>
    <string name="list_jump_solo">Solo</string>
    <string name="list_jump_way">%d Way</string>

    <!-- Jump Detail -->

    <string name="title_jump_detail">Jump Detail</string>
    <string name="title_jump_detail_number">Jump %d</string>
    <string name="detail_jump_solo">Solo</string>
    <string name="detail_jump_way">%d Way</string>
    <string name="label_detail_jump_place_header">Place</string>
    <string name="label_detail_jump_description">Description</string>
    <string name="label_detail_jump_profile_header">Jump Profile</string>
    <string name="label_detail_jump_exit_altitude">Exit Altitude</string>
    <string name="label_detail_jump_deployment_altitude">Deployment Altitude</string>
    <string name="label_detail_jump_delay">Delay</string>
    <string name="format_detail_jump_date">EEEE, d MMMM, yyyy</string>
    <string name="menu_jump_detail_edit">Edit</string>
    <string name="menu_jump_detail_delete">Delete</string>
    <string name="dialog_jump_delete_message">Delete this jump?</string>

    <!-- Jump Edit -->

    <string name="title_jump_edit">Edit Jump</string>
    <string name="title_jump_insert">New Jump</string>
    <string name="label_edit_jump_number">Jump Number</string>
    <string name="label_edit_jump_date">Date</string>
    <string name="label_edit_jump_place">Place</string>
    <string name="label_edit_jump_way">Way</string>
    <string name="label_edit_jump_type">Jump Type</string>
    <string name="label_edit_jump_exit_altitude">Exit Altitude</string>
    <string name="label_edit_jump_deployment_altitude">Deployment Altitude</string>
    <string name="label_edit_jump_delay">Delay</string>
    <string name="label_edit_jump_description">Description</string>
    <string name="hint_edit_jump_number">Jump Number</string>
    <string name="hint_edit_jump_date">Date</string>
    <string name="hint_edit_jump_way">Way</string>
    <string name="hint_edit_jump_exit_altitude">Exit Altitude</string>
    <string name="hint_edit_jump_deployment_altitude">Deployment Altitude</string>
    <string name="hint_edit_jump_delay">Delay (seconds)</string>
    <string name="hint_edit_jump_description">Description</string>
    <string name="edit_jump_add_place">Add place</string>
    <string name="edit_jump_add_type">Add jump type</string>
    <string name="format_edit_jump_date">EEEE, d MMMM, yyyy</string>
    <string name="menu_jump_edit_delete">Delete</string>

    <!-- Place List -->

    <string name="fab_place_list">Add Place</string>

    <!-- Place Detail -->

    <string name="title_place_detail">Place Detail</string>
    <string name="detail_place_location_header">Location</string>
    <string name="detail_place_stats_header">Statistics</string>
    <string name="label_detail_place_latitude">Latitude</string>
    <string name="label_detail_place_longitude">Longitude</string>
    <string name="label_detail_place_jump_count">Jumps</string>
    <string name="label_detail_place_jump_last">Last jump</string>
    <string name="detail_place_last_jump_none">Never</string>
    <string name="menu_place_detail_edit">Edit</string>
    <string name="menu_place_detail_delete">Delete</string>

    <!-- Jump Type List -->

    <string name="fab_jumptype_list">Add Jump Type</string>

    <!-- Jump Type Detail -->

    <string name="title_jumptype_detail">Jump Type Detail</string>
    <string name="detail_jumptype_stats_header">Statistics</string>
    <string name="label_detail_jumptype_jump_count">Jumps</string>
    <string name="label_detail_jumptype_jump_last">Last jump</string>
    <string name="detail_jumptype_last_jump_none">Never</string>
    <string name="menu_jumptype_detail_delete">Delete</string>
    <string name="dialog_jumptype_delete_message">Delete this jump type?</string>

    <!-- Jump Type Edit -->

    <string name="title_jumptype_edit">Edit Jump Type</string>
    <string name="title_jumptype_insert">New Jump Type</string>
    <string name="label_edit_jumptype_name">Jump Type</string>
    <string name="hint_edit_jumptype_name">Jump Type</string>
    <string name="menu_jumptype_edit_delete">Delete</string>

    <!-- Place Edit -->

    <string name="title_place_edit">Edit Place</string>
    <string name="title_place_insert">New Place</string>
    <string name="label_edit_place_name">Place name</string>
    <string name="label_edit_place_latitude">Latitude</string>
    <string name="label_edit_place_longitude">Longitude</string>
    <string name="hint_edit_place_name">Place Name</string>
    <string name="hint_edit_place_latitude">Latitude</string>
    <string name="hint_edit_place_longitude">Longitude</string>
    <string name="dialog_place_delete_message">Delete this place?</string>

    <!-- Delete Item Dialog -->

    <string name="dialog_item_delete_positive">OK</string>
    <string name="dialog_item_delete_negative">Cancel</string>

    <!-- Edit Item -->

    <string name="menu_edit_save">Save</string>

    <!-- Settings -->

    <string name="title_settings">Settings</string>
    <string name="preference_title_defaults">Logbook defaults</string>
    <string name="preference_title_defaults_place">Place</string>
    <string name="preference_title_defaults_jumptype">Jump type</string>
    <string name="preference_title_defaults_way">Way</string>
    <string name="preference_default_defaults_way">1</string>
    <string name="preference_title_defaults_exit_altitude">Exit altitude</string>
    <string name="preference_title_defaults_deployment_altitude">Deployment altitude</string>
    <string name="preference_title_defaults_delay">Delay</string>
    <string name="preference_title_data_liberation">Data Liberation</string>
    <string name="preference_title_data_liberation_export">Export data</string>
    <string name="preference_summary_data_liberation_export">Export app data to Google Drive in JSON format</string>
    <string name="preference_title_data_liberation_import">Import data</string>
    <string name="preference_summary_data_liberation_import">Import app data from Google Drive in JSON format</string>

    <!-- Debug Settings -->

    <string name="preference_title_debug">Debug</string>
    <string name="preference_title_debug_insert_data">Insert test data</string>
    <string name="preference_summary_debug_insert_data">Test data provided with the app will be inserted</string>
    <string name="preference_title_debug_delete_data">Delete all data</string>
    <string name="preference_summary_debug_delete_data">All app data will be deleted</string>

    <!-- Data Liberation -->

    <string name="title_export">Export</string>
    <string name="title_import">Import</string>

    <!-- Time Utility -->

    <string name="time_ago_today">today</string>

    <plurals name="time_ago_days">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <plurals name="time_ago_weeks">
        <item quantity="one">1 week ago</item>
        <item quantity="other">%d weeks ago</item>
    </plurals>
    <plurals name="time_ago_months">
        <item quantity="one">1 month ago</item>
        <item quantity="other">%d months ago</item>
    </plurals>
    <plurals name="time_ago_years">
        <item quantity="one">1 year ago</item>
        <item quantity="other">%d years ago</item>
    </plurals>

    <!-- Layout Preview Text -->

    <string name="tools_text_jump_title">4 Way Freefly</string>
    <string name="tools_text_jump_number">391</string>
    <string name="tools_text_jump_time_ago">4 weeks ago</string>
    <string name="tools_text_jump_detail_date">Tuesday, 11 February, 2014</string>
    <string name="tools_text_jump_description">jumped out of the plane and deployed parachute some time later</string>
    <string name="tools_text_jump_way">4 way</string>
    <string name="tools_text_jump_way_type">4 Way Freefly</string>
    <string name="tools_text_jump_type">Freefly</string>
    <string name="tools_text_jump_exit_altitude">12,460</string>
    <string name="tools_text_jump_deployment_altitude">3,500</string>
    <string name="tools_text_jump_delay">59</string>
    <string name="tools_text_place_name">Strathallan</string>
    <string name="tools_text_place_longitude">-3.750835</string>
    <string name="tools_text_place_latitude">56.326013</string>
    <string name="tools_text_place_jump_count">121</string>
    <string name="tools_text_place_jump_last">4 days ago</string>
    <string name="tools_text_jumptype_name">Formation Skydiving</string>
    <string name="tools_text_jumptype_jump_count">73</string>
    <string name="tools_text_jumptype_jump_last">2 months ago</string>

</resources>
