<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/preference_title_defaults">

        <ListPreference
            android:key="preference_key_default_place"
            android:title="@string/preference_title_defaults_place"
            android:dialogTitle="@string/preference_title_defaults_place" />

        <ListPreference
            android:key="preference_key_default_jumptype"
            android:title="@string/preference_title_defaults_jumptype"
            android:dialogTitle="@string/preference_title_defaults_jumptype" />

        <EditTextPreference
            android:key="preference_key_default_way"
            android:title="@string/preference_title_defaults_way"
            android:dialogTitle="@string/preference_title_defaults_way"
            android:inputType="number"
            android:defaultValue="@string/preference_default_defaults_way" />

        <EditTextPreference
            android:key="preference_key_default_exit_altitude"
            android:title="@string/preference_title_defaults_exit_altitude"
            android:dialogTitle="@string/preference_title_defaults_exit_altitude"
            android:inputType="number" />

        <EditTextPreference
            android:key="preference_key_default_deployment_altitude"
            android:title="@string/preference_title_defaults_deployment_altitude"
            android:dialogTitle="@string/preference_title_defaults_deployment_altitude"
            android:inputType="number" />

        <EditTextPreference
            android:key="preference_key_default_delay"
            android:title="@string/preference_title_defaults_delay"
            android:dialogTitle="@string/preference_title_defaults_delay"
            android:inputType="number" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_title_data_liberation">

        <Preference
            android:title="@string/preference_title_data_liberation_export"
            android:summary="@string/preference_summary_data_liberation_export">
            <intent
                android:targetPackage="org.tomcurran.remiges"
                android:targetClass="org.tomcurran.remiges.ui.liberation.ExportActivity" />
        </Preference>

        <Preference
            android:title="@string/preference_title_data_liberation_import"
            android:summary="@string/preference_summary_data_liberation_import">
            <intent
                android:targetPackage="org.tomcurran.remiges"
                android:targetClass="org.tomcurran.remiges.ui.liberation.ImportActivity" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
