<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context="org.tomcurran.remiges.ui.JumpTypeEditFragment">

    <RelativeLayout
        style="@style/EditPlaceContainer">

        <TextView
            android:id="@+id/label_edit_place_name"
            style="@style/EditPlaceLabel.Name"
            android:text="@string/label_edit_place_name" />

        <TextView
            android:id="@+id/label_edit_place_latitude"
            style="@style/EditPlaceLabel.Latitude"
            android:text="@string/label_edit_place_latitude" />

        <TextView
            android:id="@+id/label_edit_place_longitude"
            style="@style/EditPlaceLabel.Longitude"
            android:text="@string/label_edit_place_longitude" />

        <EditText
            android:id="@+id/edit_place_name"
            android:inputType="text"
            style="@style/EditPlace.Name" />

        <EditText
            android:id="@+id/edit_place_latitude"
            android:inputType="numberSigned|numberDecimal"
            style="@style/EditPlace.Latitude" />

        <EditText
            android:id="@+id/edit_place_longitude"
            android:inputType="numberSigned|numberDecimal"
            style="@style/EditPlace.Longitude" />

    </RelativeLayout>

</ScrollView>
